deploy/address-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: address-service
  namespace: microservices
  labels:
    app: address-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: address-service
  template:
    metadata:
      labels:
        app: address-service
    spec:
      containers:
        - name: address-service
          image: mostafijurr/ms-address-service:1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8881
          readinessProbe:
            httpGet:
              path: /address/actuator/health
              port: 8881
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /address/actuator/health
              port: 8881
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: address-service
  namespace: microservices
  labels:
    app: address-service
spec:
  selector:
    app: address-service
  type: ClusterIP
  ports:
    - name: http
      port: 8881
      targetPort: 8881
