deploy/course-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-service
  namespace: microservices
  labels:
    app: course-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course-service
  template:
    metadata:
      labels:
        app: course-service
    spec:
      containers:
        - name: course-service
          image: mostafijurr/ms-course-service:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8883
          readinessProbe:
            httpGet:
              path: /course/actuator/health
              port: 8883
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /course/actuator/health
              port: 8883
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: course-service
  namespace: microservices
  labels:
    app: course-service
spec:
  selector:
    app: course-service
  type: ClusterIP
  ports:
    - name: http
      port: 8883
      targetPort: 8883
