deploy/eureka-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: microservices
  labels:
    app: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: mostafijurr/ms-eureka-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
          readinessProbe:
            tcpSocket:
              port: 8761
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8761
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: microservices
  labels:
    app: eureka-server
spec:
  selector:
    app: eureka-server
  type: ClusterIP
  ports:
    - name: http
      port: 8761
      targetPort: 8761
