deploy/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: microservices
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: mostafijurr/ms-gateway-service:1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: microservices
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
    - name: http
      port: 9090
      targetPort: 9090
