deploy/student-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service
  namespace: microservices
  labels:
    app: student-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-service
  template:
    metadata:
      labels:
        app: student-service
    spec:
      containers:
        - name: student-service
          image: mostafijurr/ms-student-service:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8882
          readinessProbe:
            httpGet:
              path: /student/actuator/health
              port: 8882
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /student/actuator/health
              port: 8882
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: student-service
  namespace: microservices
  labels:
    app: student-service
spec:
  selector:
    app: student-service
  type: ClusterIP
  ports:
    - name: http
      port: 8882
      targetPort: 8882
